# JSCRM-fix-1-tasks-not-created
fix(frontend,backend): fix tasks not created
